@@ -21,7 +21,6 @@ import reactor.core.publisher.Mono;
 
 import java.time.Duration;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.isNull;
 import static no.nav.dolly.errorhandling.ErrorStatusDecoder.encodeStatus;
@@ -61,7 +60,7 @@ public class SykemeldingClient implements ClientRegister {
 
     @Override
     public void release(List<String> identer) {
-        identer.forEach(ident -> sykemeldingConsumer.deleteTsmSykemeldinger(ident)
+        identer.forEach(ident -> sykemeldingConsumer.deleteSykemeldinger(ident)
                 .subscribe());
     }
 
@@ -74,6 +73,7 @@ public class SykemeldingClient implements ClientRegister {
     }
 
     private String getStatus(SykemeldingResponseDTO status) {
+
         log.info("Sykemelding response for {} mottatt, {}", status.getIdent(), Json.pretty(status));
         return status.getStatus().is2xxSuccessful()
                 ? "OK"
@@ -100,7 +100,7 @@ public class SykemeldingClient implements ClientRegister {
                         .fom(a.getFom())
                         .tom(a.getTom())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         SykemeldingRequestDTO request = SykemeldingRequestDTO.builder()
                 .type(type)
@@ -108,6 +108,6 @@ public class SykemeldingClient implements ClientRegister {
                 .aktivitet(aktivitet)
                 .build();
 
-        return sykemeldingConsumer.postTsmSykemelding(request);
+        return sykemeldingConsumer.postSykemelding(request);
     }
 }
